doc: updated documentation for plot extension version 1.3

--- a/classes/data.rawdataitem.html
+++ b/classes/data.rawdataitem.html
@@ -378,7 +378,7 @@
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Returns the data associated to the <a href="data.rawdataitem.html">RawDataItem</a>. The data is returned as a [[HostBuffer]], which can be converted to a [[Buffer]] using the <code>makeBuffer</code> function.</p>
+									<p>Returns the data associated to the <a href="data.rawdataitem.html">RawDataItem</a>. The data is returned as a <a href="../enums/drawing.buffertype.html#hostbuffer">HostBuffer</a>, which can be converted to a [[Buffer]] using the <code>makeBuffer</code> function.</p>
 								</div>
 							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Buffer</span>
