--- a/classes/drawing.bitmap.html
+++ b/classes/drawing.bitmap.html
@@ -121,7 +121,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:176</li>
+									<li>Defined in drawing/image/bitmap.ts:185</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -165,13 +165,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:219</li>
+									<li>Defined in drawing/image/bitmap.ts:238</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Loads the size and resolution of the image.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../interfaces/drawing.bitmapmeasurements.html" class="tsd-signature-type">BitmapMeasurements</a></h4>
 						</li>
@@ -187,7 +191,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:195</li>
+									<li>Defined in drawing/image/bitmap.ts:201</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -212,7 +216,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:211</li>
+									<li>Defined in drawing/image/bitmap.ts:229</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
