--- a/classes/drawing.customgeometry.html
+++ b/classes/drawing.customgeometry.html
@@ -185,7 +185,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:695</li>
+									<li>Defined in drawing/geometry/geometries.ts:697</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -226,7 +226,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.customdescription.html">CustomDescription</a>.<a href="../interfaces/drawing.customdescription.html#pathstring">pathString</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:690</li>
+							<li>Defined in drawing/geometry/geometries.ts:692</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -266,7 +266,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#type">type</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:695</li>
+									<li>Defined in drawing/geometry/geometries.ts:697</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -289,13 +289,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:348</li>
+									<li>Defined in drawing/geometry/geometries.ts:349</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../interfaces/drawing.geometrymeasurements.html" class="tsd-signature-type">GeometryMeasurements</a></h4>
 						</li>
@@ -312,7 +316,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#serialize">serialize</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:729</li>
+									<li>Defined in drawing/geometry/geometries.ts:731</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -369,7 +373,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:712</li>
+									<li>Defined in drawing/geometry/geometries.ts:714</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -401,13 +405,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure-1">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:367</li>
+									<li>Defined in drawing/geometry/geometries.ts:369</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the specified geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
