--- a/classes/drawing.formattedtext.html
+++ b/classes/drawing.formattedtext.html
@@ -361,13 +361,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/text/formatted_text.ts:395</li>
+									<li>Defined in drawing/text/formatted_text.ts:396</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Measures the formatted text and returns a  <a href="../interfaces/drawing.textmeasurements.html">TextMeasurements</a> object that contains information about the final size and layout.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../interfaces/drawing.textmeasurements.html" class="tsd-signature-type">TextMeasurements</a></h4>
 						</li>
@@ -439,13 +443,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/text/formatted_text.ts:418</li>
+									<li>Defined in drawing/text/formatted_text.ts:420</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Measures the specified formatted text and returns a  <a href="../interfaces/drawing.textmeasurements.html">TextMeasurements</a> object that contains information about the final size and layout.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
