--- a/classes/drawing.geometrygroup.html
+++ b/classes/drawing.geometrygroup.html
@@ -144,7 +144,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:754</li>
+									<li>Defined in drawing/geometry/geometries.ts:756</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -193,7 +193,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.geometrygroupgeometrydescription.html">GeometryGroupGeometryDescription</a>.<a href="../interfaces/drawing.geometrygroupgeometrydescription.html#children">children</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:744</li>
+							<li>Defined in drawing/geometry/geometries.ts:746</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -209,7 +209,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.geometrygroupgeometrydescription.html">GeometryGroupGeometryDescription</a>.<a href="../interfaces/drawing.geometrygroupgeometrydescription.html#fillrule">fillRule</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:749</li>
+							<li>Defined in drawing/geometry/geometries.ts:751</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -249,7 +249,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#type">type</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:754</li>
+									<li>Defined in drawing/geometry/geometries.ts:756</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -272,13 +272,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:348</li>
+									<li>Defined in drawing/geometry/geometries.ts:349</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../interfaces/drawing.geometrymeasurements.html" class="tsd-signature-type">GeometryMeasurements</a></h4>
 						</li>
@@ -295,7 +299,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#serialize">serialize</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:798</li>
+									<li>Defined in drawing/geometry/geometries.ts:800</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -352,7 +356,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:777</li>
+									<li>Defined in drawing/geometry/geometries.ts:779</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -384,13 +388,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure-1">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:367</li>
+									<li>Defined in drawing/geometry/geometries.ts:369</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the specified geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
