--- a/classes/tooltips.characteristictooltipitem.html
+++ b/classes/tooltips.characteristictooltipitem.html
@@ -122,7 +122,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips.ts:220</li>
+									<li>Defined in tooltips.ts:322</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -144,7 +144,7 @@
 					<div class="tsd-signature tsd-kind-icon">characteristic<span class="tsd-signature-symbol">:</span> <a href="data.inspectionplanitem.html" class="tsd-signature-type">InspectionPlanItem</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips.ts:220</li>
+							<li>Defined in tooltips.ts:322</li>
 						</ul>
 					</aside>
 				</section>
@@ -161,7 +161,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips.ts:230</li>
+									<li>Defined in tooltips.ts:332</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -255,7 +255,22 @@
 				</ul>
 				<ul class="after-current">
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.defecttooltipitem.html" class="tsd-kind-icon">Defect<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.drawingtooltipitem.html" class="tsd-kind-icon">Drawing<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.imagetooltipitem.html" class="tsd-kind-icon">Image<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.measurementtooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="tooltips.measurementvaluetooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Value<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.parttooltipitem.html" class="tsd-kind-icon">Part<wbr>Tooltip<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="tooltips.texttooltipitem.html" class="tsd-kind-icon">Text<wbr>Tooltip<wbr>Item</a>
