--- a/classes/tooltips.defecttooltipitem.html
+++ b/classes/tooltips.defecttooltipitem.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>TooltipItemId | PiWeb Plot Extension API Reference</title>
+	<title>DefectTooltipItem | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,10 +57,10 @@
 					<a href="../modules/tooltips.html">tooltips</a>
 				</li>
 				<li>
-					<a href="tooltips.tooltipitemid.html">TooltipItemId</a>
+					<a href="tooltips.defecttooltipitem.html">DefectTooltipItem</a>
 				</li>
 			</ul>
-			<h1>Enumeration TooltipItemId</h1>
+			<h1>Class DefectTooltipItem</h1>
 		</div>
 	</div>
 </header>
@@ -71,107 +71,136 @@
 				<div class="tsd-comment tsd-typography">
 				</div>
 			</section>
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="target">DefectTooltipItem</span>
+					</li>
+				</ul>
+			</section>
+			<section class="tsd-panel">
+				<h3>Implements</h3>
+				<ul class="tsd-hierarchy">
+					<li><span class="tsd-signature-type">Serializable</span></li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section tsd-is-not-exported">
-							<h3>Enumeration members</h3>
+							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="tooltips.tooltipitemid.html#characteristicref" class="tsd-kind-icon">Characteristic<wbr>Ref</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="tooltips.tooltipitemid.html#defect" class="tsd-kind-icon">Defect</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="tooltips.tooltipitemid.html#drawing" class="tsd-kind-icon">Drawing</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="tooltips.tooltipitemid.html#image" class="tsd-kind-icon">Image</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="tooltips.tooltipitemid.html#measurementref" class="tsd-kind-icon">Measurement<wbr>Ref</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="tooltips.tooltipitemid.html#measurementvalueref" class="tsd-kind-icon">Measurement<wbr>Value<wbr>Ref</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="tooltips.tooltipitemid.html#partref" class="tsd-kind-icon">Part<wbr>Ref</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="tooltips.tooltipitemid.html#text" class="tsd-kind-icon">Text</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-not-exported"><a href="tooltips.defecttooltipitem.html#constructor" class="tsd-kind-icon">constructor</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Properties</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-not-exported"><a href="tooltips.defecttooltipitem.html#defect" class="tsd-kind-icon">defect</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-not-exported"><a href="tooltips.defecttooltipitem.html#direction" class="tsd-kind-icon">direction</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-not-exported"><a href="tooltips.defecttooltipitem.html#image" class="tsd-kind-icon">image</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Methods</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-not-exported"><a href="tooltips.defecttooltipitem.html#serialize" class="tsd-kind-icon">serialize</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
-				<h2>Enumeration members</h2>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="characteristicref" class="tsd-anchor"></a>
-					<h3>Characteristic<wbr>Ref</h3>
-					<div class="tsd-signature tsd-kind-icon">Characteristic<wbr>Ref<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in tooltips.ts:236</li>
-						</ul>
-					</aside>
+				<h2>Constructors</h2>
+				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class tsd-is-not-exported">
+					<a name="constructor" class="tsd-anchor"></a>
+					<h3>constructor</h3>
+					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-not-exported">
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Defect<wbr>Tooltip<wbr>Item<span class="tsd-signature-symbol">(</span>defect<span class="tsd-signature-symbol">: </span><a href="data.defect.html" class="tsd-signature-type">Defect</a>, image<span class="tsd-signature-symbol">?: </span><a href="drawing.bitmap.html" class="tsd-signature-type">Bitmap</a>, direction<span class="tsd-signature-symbol">?: </span><a href="../modules/data.html#volumedirection" class="tsd-signature-type">VolumeDirection</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="tooltips.defecttooltipitem.html" class="tsd-signature-type">DefectTooltipItem</a></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in tooltips.ts:447</li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>defect: <a href="data.defect.html" class="tsd-signature-type">Defect</a></h5>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> image: <a href="drawing.bitmap.html" class="tsd-signature-type">Bitmap</a></h5>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> direction: <a href="../modules/data.html#volumedirection" class="tsd-signature-type">VolumeDirection</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="tooltips.defecttooltipitem.html" class="tsd-signature-type">DefectTooltipItem</a></h4>
+						</li>
+					</ul>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
 					<a name="defect" class="tsd-anchor"></a>
-					<h3>Defect</h3>
-					<div class="tsd-signature tsd-kind-icon">Defect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;8</span></div>
+					<h3>defect</h3>
+					<div class="tsd-signature tsd-kind-icon">defect<span class="tsd-signature-symbol">:</span> <a href="data.defect.html" class="tsd-signature-type">Defect</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips.ts:242</li>
+							<li>Defined in tooltips.ts:445</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="drawing" class="tsd-anchor"></a>
-					<h3>Drawing</h3>
-					<div class="tsd-signature tsd-kind-icon">Drawing<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;6</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
+					<a name="direction" class="tsd-anchor"></a>
+					<h3>direction</h3>
+					<div class="tsd-signature tsd-kind-icon">direction<span class="tsd-signature-symbol">:</span> <a href="../modules/data.html#volumedirection" class="tsd-signature-type">VolumeDirection</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips.ts:241</li>
+							<li>Defined in tooltips.ts:447</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
 					<a name="image" class="tsd-anchor"></a>
-					<h3>Image</h3>
-					<div class="tsd-signature tsd-kind-icon">Image<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;5</span></div>
+					<h3>image</h3>
+					<div class="tsd-signature tsd-kind-icon">image<span class="tsd-signature-symbol">:</span> <a href="drawing.bitmap.html" class="tsd-signature-type">Bitmap</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips.ts:240</li>
+							<li>Defined in tooltips.ts:446</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="measurementref" class="tsd-anchor"></a>
-					<h3>Measurement<wbr>Ref</h3>
-					<div class="tsd-signature tsd-kind-icon">Measurement<wbr>Ref<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in tooltips.ts:238</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="measurementvalueref" class="tsd-anchor"></a>
-					<h3>Measurement<wbr>Value<wbr>Ref</h3>
-					<div class="tsd-signature tsd-kind-icon">Measurement<wbr>Value<wbr>Ref<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in tooltips.ts:239</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="partref" class="tsd-anchor"></a>
-					<h3>Part<wbr>Ref</h3>
-					<div class="tsd-signature tsd-kind-icon">Part<wbr>Ref<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in tooltips.ts:237</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="text" class="tsd-anchor"></a>
-					<h3>Text</h3>
-					<div class="tsd-signature tsd-kind-icon">Text<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in tooltips.ts:235</li>
-						</ul>
-					</aside>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Methods</h2>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-not-exported">
+					<a name="serialize" class="tsd-anchor"></a>
+					<h3>serialize</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-not-exported">
+						<li class="tsd-signature tsd-kind-icon">serialize<span class="tsd-signature-symbol">(</span>target<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">BufferWriter</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in tooltips.ts:456</li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>target: <span class="tsd-signature-type">BufferWriter</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
 				</section>
 			</section>
 		</div>
@@ -229,68 +258,59 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="../enums/tooltips.tooltipitemid.html" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Id</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="../enums/tooltips.tooltipitemtypeid.html" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Type<wbr>Id</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.characteristictooltipitem.html" class="tsd-kind-icon">Characteristic<wbr>Tooltip<wbr>Item</a>
+					</li>
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="tooltips.tooltipitemid.html" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Id</a>
+					<li class="current tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.defecttooltipitem.html" class="tsd-kind-icon">Defect<wbr>Tooltip<wbr>Item</a>
 						<ul>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="tooltips.tooltipitemid.html#characteristicref" class="tsd-kind-icon">Characteristic<wbr>Ref</a>
+							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-not-exported">
+								<a href="tooltips.defecttooltipitem.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="tooltips.tooltipitemid.html#defect" class="tsd-kind-icon">Defect</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
+								<a href="tooltips.defecttooltipitem.html#defect" class="tsd-kind-icon">defect</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="tooltips.tooltipitemid.html#drawing" class="tsd-kind-icon">Drawing</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
+								<a href="tooltips.defecttooltipitem.html#direction" class="tsd-kind-icon">direction</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="tooltips.tooltipitemid.html#image" class="tsd-kind-icon">Image</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-not-exported">
+								<a href="tooltips.defecttooltipitem.html#image" class="tsd-kind-icon">image</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="tooltips.tooltipitemid.html#measurementref" class="tsd-kind-icon">Measurement<wbr>Ref</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="tooltips.tooltipitemid.html#measurementvalueref" class="tsd-kind-icon">Measurement<wbr>Value<wbr>Ref</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="tooltips.tooltipitemid.html#partref" class="tsd-kind-icon">Part<wbr>Ref</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="tooltips.tooltipitemid.html#text" class="tsd-kind-icon">Text</a>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-not-exported">
+								<a href="tooltips.defecttooltipitem.html#serialize" class="tsd-kind-icon">serialize</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="tooltips.tooltipitemtypeid.html" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Type<wbr>Id</a>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.drawingtooltipitem.html" class="tsd-kind-icon">Drawing<wbr>Tooltip<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../classes/tooltips.characteristictooltipitem.html" class="tsd-kind-icon">Characteristic<wbr>Tooltip<wbr>Item</a>
+						<a href="tooltips.imagetooltipitem.html" class="tsd-kind-icon">Image<wbr>Tooltip<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../classes/tooltips.defecttooltipitem.html" class="tsd-kind-icon">Defect<wbr>Tooltip<wbr>Item</a>
+						<a href="tooltips.measurementtooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Tooltip<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../classes/tooltips.drawingtooltipitem.html" class="tsd-kind-icon">Drawing<wbr>Tooltip<wbr>Item</a>
+						<a href="tooltips.measurementvaluetooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Value<wbr>Tooltip<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../classes/tooltips.imagetooltipitem.html" class="tsd-kind-icon">Image<wbr>Tooltip<wbr>Item</a>
+						<a href="tooltips.parttooltipitem.html" class="tsd-kind-icon">Part<wbr>Tooltip<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../classes/tooltips.measurementtooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Tooltip<wbr>Item</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../classes/tooltips.measurementvaluetooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Value<wbr>Tooltip<wbr>Item</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../classes/tooltips.parttooltipitem.html" class="tsd-kind-icon">Part<wbr>Tooltip<wbr>Item</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../classes/tooltips.texttooltipitem.html" class="tsd-kind-icon">Text<wbr>Tooltip<wbr>Item</a>
+						<a href="tooltips.texttooltipitem.html" class="tsd-kind-icon">Text<wbr>Tooltip<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="../classes/tooltips.tooltip.html" class="tsd-kind-icon">Tooltip</a>
+						<a href="tooltips.tooltip.html" class="tsd-kind-icon">Tooltip</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../modules/tooltips.html#tooltipitem" class="tsd-kind-icon">Tooltip<wbr>Item</a>
