--- a/classes/tooltips.texttooltipitem.html
+++ b/classes/tooltips.texttooltipitem.html
@@ -124,7 +124,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips.ts:190</li>
+									<li>Defined in tooltips.ts:292</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -152,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">class<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips.ts:190</li>
+							<li>Defined in tooltips.ts:292</li>
 						</ul>
 					</aside>
 				</section>
@@ -162,7 +162,7 @@
 					<div class="tsd-signature tsd-kind-icon">text<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips.ts:188</li>
+							<li>Defined in tooltips.ts:290</li>
 						</ul>
 					</aside>
 				</section>
@@ -172,7 +172,7 @@
 					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <a href="../modules/tooltips.html#tooltipitemtype" class="tsd-signature-type">TooltipItemType</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips.ts:189</li>
+							<li>Defined in tooltips.ts:291</li>
 						</ul>
 					</aside>
 				</section>
@@ -189,7 +189,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips.ts:199</li>
+									<li>Defined in tooltips.ts:301</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -268,7 +268,22 @@
 						<a href="tooltips.characteristictooltipitem.html" class="tsd-kind-icon">Characteristic<wbr>Tooltip<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.defecttooltipitem.html" class="tsd-kind-icon">Defect<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.drawingtooltipitem.html" class="tsd-kind-icon">Drawing<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.imagetooltipitem.html" class="tsd-kind-icon">Image<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.measurementtooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="tooltips.measurementvaluetooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Value<wbr>Tooltip<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="tooltips.parttooltipitem.html" class="tsd-kind-icon">Part<wbr>Tooltip<wbr>Item</a>
 					</li>
 				</ul>
 				<ul class="current">
