--- a/modules/drawing.html
+++ b/modules/drawing.html
@@ -138,6 +138,7 @@ context.setPen( penDescription );
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private"><a href="../enums/drawing.arctypeid.html" class="tsd-kind-icon">Arc<wbr>Type<wbr>Id</a></li>
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private"><a href="../enums/drawing.brushid.html" class="tsd-kind-icon">Brush<wbr>Id</a></li>
+								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported"><a href="../enums/drawing.buffertype.html" class="tsd-kind-icon">Buffer<wbr>Type</a></li>
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported"><a href="../enums/drawing.colortype.html" class="tsd-kind-icon">Color<wbr>Type</a></li>
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private"><a href="../enums/drawing.contextoperation.html" class="tsd-kind-icon">Context<wbr>Operation</a></li>
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported"><a href="../enums/drawing.drawingstate.html" class="tsd-kind-icon">Drawing<wbr>State</a></li>
@@ -881,7 +882,7 @@ context.setPen( penDescription );
 					<div class="tsd-signature tsd-kind-icon">Pixel<wbr>Format<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"rgb24"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"bgr24"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"bgra32"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"pbgra32"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"gray8"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/bitmap.ts:51</li>
+							<li>Defined in drawing/image/bitmap.ts:60</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -1150,7 +1151,7 @@ context.setPen( penDescription );
 					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/drawing.ts:24</li>
+							<li>Defined in drawing/text/font.ts:19</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -1172,7 +1173,7 @@ context.setPen( penDescription );
 					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/text/formatted_text.ts:16</li>
+							<li>Defined in drawing/drawing.ts:24</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -1184,7 +1185,7 @@ context.setPen( penDescription );
 					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:16</li>
+							<li>Defined in drawing/text/formatted_text.ts:16</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -1196,7 +1197,7 @@ context.setPen( penDescription );
 					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/text/font.ts:19</li>
+							<li>Defined in drawing/geometry/geometries.ts:16</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -1656,7 +1657,7 @@ context.setPen( penDescription );
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:67</li>
+									<li>Defined in drawing/image/bitmap.ts:76</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -1948,6 +1949,9 @@ context.setPen( penDescription );
 					</li>
 					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
 						<a href="../enums/drawing.brushid.html" class="tsd-kind-icon">Brush<wbr>Id</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="../enums/drawing.buffertype.html" class="tsd-kind-icon">Buffer<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="../enums/drawing.colortype.html" class="tsd-kind-icon">Color<wbr>Type</a>
