--- a/modules/environment.html
+++ b/modules/environment.html
@@ -189,7 +189,7 @@
 					<div class="tsd-signature tsd-kind-icon">Limit<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"tolerance"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"warning"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"control"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"scrap"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:459</li>
+							<li>Defined in environment.ts:469</li>
 						</ul>
 					</aside>
 				</section>
@@ -199,7 +199,7 @@
 					<div class="tsd-signature tsd-kind-icon">Limit<wbr>Usage<wbr>Reference<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"nominal"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"middleOfTolerance"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:431</li>
+							<li>Defined in environment.ts:441</li>
 						</ul>
 					</aside>
 				</section>
@@ -224,13 +224,17 @@
 					<div class="tsd-signature tsd-kind-icon">api<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;provider.ApiVersion</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:404</li>
+							<li>Defined in environment.ts:411</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
 							<p>Gets the semantic version of the plot extension API that is used to host the plot.</p>
 						</div>
+						<dl class="tsd-comment-tags">
+							<dt>host</dt>
+							<dd></dd>
+						</dl>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
@@ -239,7 +243,7 @@
 					<div class="tsd-signature tsd-kind-icon">cached<wbr>Limits<wbr>Configuration<span class="tsd-signature-symbol">:</span> <a href="../classes/environment.limitsconfiguration.html" class="tsd-signature-type">LimitsConfiguration</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:558</li>
+							<li>Defined in environment.ts:568</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -251,7 +255,7 @@
 					<div class="tsd-signature tsd-kind-icon">cached<wbr>Limits<wbr>Configuration<wbr>Token<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:563</li>
+							<li>Defined in environment.ts:573</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -263,13 +267,17 @@
 					<div class="tsd-signature tsd-kind-icon">client<wbr>String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;provider.ClientString</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:394</li>
+							<li>Defined in environment.ts:399</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
 							<p>Gets the name of the hosting PiWeb client.</p>
 						</div>
+						<dl class="tsd-comment-tags">
+							<dt>host</dt>
+							<dd></dd>
+						</dl>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
@@ -278,13 +286,17 @@
 					<div class="tsd-signature tsd-kind-icon">client<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;provider.ClientVersion</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:399</li>
+							<li>Defined in environment.ts:405</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
 							<p>Gets the version of the hosting PiWeb client.</p>
 						</div>
+						<dl class="tsd-comment-tags">
+							<dt>host</dt>
+							<dd></dd>
+						</dl>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
@@ -329,7 +341,7 @@
 					<div class="tsd-signature tsd-kind-icon">toolbox<wbr>Item<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;provider.ToolboxItemName</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:389</li>
+							<li>Defined in environment.ts:393</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -337,6 +349,10 @@
 							<p>If the extensions defined multiple toolbox entries in the <code>package.json</code> manifest file, this property can be used to find out which entry the user picked.
 							The returned value is the property name used as toolbox entry id in the manifest.</p>
 						</div>
+						<dl class="tsd-comment-tags">
+							<dt>host</dt>
+							<dd></dd>
+						</dl>
 					</div>
 				</section>
 			</section>
@@ -352,13 +368,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:417</li>
+									<li>Defined in environment.ts:426</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns prefered display unit of angles. This can be configured in the settings menu of Piweb Designer and PiWeb Monitor.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="environment.html#angleunit" class="tsd-signature-type">AngleUnit</a></h4>
 						</li>
@@ -374,7 +394,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:426</li>
+									<li>Defined in environment.ts:436</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -382,6 +402,10 @@
 									<p>Returns prefered number of decimal places of displayed values. This can be configured in the settings menu of Piweb Designer and PiWeb Monitor.
 									Use this only as a fallback value in case no prefered number of decimal places is configured for the displayed characteristic by attribute K2022.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
 						</li>
@@ -397,13 +421,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:409</li>
+									<li>Defined in environment.ts:417</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns prefered display unit of length. This can be configured in the settings menu of Piweb Designer and PiWeb Monitor.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="environment.html#lengthunit" class="tsd-signature-type">LengthUnit</a></h4>
 						</li>
@@ -419,9 +447,18 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:566</li>
+									<li>Defined in environment.ts:579</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns the limit configuration that can be specified for a report.</p>
+								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
+							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../classes/environment.limitsconfiguration.html" class="tsd-signature-type">LimitsConfiguration</a></h4>
 						</li>
 					</ul>
@@ -436,13 +473,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:380</li>
+									<li>Defined in environment.ts:383</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the position of the element on the report page in <strong>millimeters</strong>.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../classes/drawing.point.html" class="tsd-signature-type">Point</a></h4>
 						</li>
@@ -458,13 +499,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:372</li>
+									<li>Defined in environment.ts:374</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the current size of the element in <strong>millimeters</strong>.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../classes/drawing.size.html" class="tsd-signature-type">Size</a></h4>
 						</li>
@@ -480,7 +525,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:364</li>
+									<li>Defined in environment.ts:365</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -488,6 +533,10 @@
 									<p>If <code>true</code>, the plot is rendered by PiWeb Designer, otherwise it&#39;s rendered by PiWeb Monitor. Some very complex elements don&#39;t render
 									their complete content while in design mode, to guarantee a smooth and fluent editing in PiWeb Designer.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
 						</li>
@@ -553,7 +602,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:474</li>
+									<li>Defined in environment.ts:484</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -578,7 +627,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:444</li>
+									<li>Defined in environment.ts:454</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -603,7 +652,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in environment.ts:597</li>
+									<li>Defined in environment.ts:610</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
