--- a/modules/expressions.html
+++ b/modules/expressions.html
@@ -180,13 +180,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in expressions.ts:56</li>
+									<li>Defined in expressions.ts:57</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Evaluates the specified expression and returns the result untyped.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -208,13 +212,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in expressions.ts:107</li>
+									<li>Defined in expressions.ts:112</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Evaluates the specified expression and returns the result as <code>array</code> or <code>undefined</code>, in case the result wasn&#39;t an <code>array</code> of any kind.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -242,13 +250,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in expressions.ts:94</li>
+									<li>Defined in expressions.ts:98</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Evaluates the specified expression and returns the result as <code>date</code> or <code>undefined</code>, in case the result can&#39;t be converted into a <code>date</code> representation.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -276,13 +288,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in expressions.ts:81</li>
+									<li>Defined in expressions.ts:84</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Evaluates the specified expression and returns the result as <code>number</code> or <code>undefined</code>, in case the result can&#39;t be converted into a <code>number</code> representation.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -310,13 +326,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in expressions.ts:68</li>
+									<li>Defined in expressions.ts:70</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Evaluates the specified expression and returns the result as <code>string</code> or <code>undefined</code>, in case the result can&#39;t be converted into a <code>string</code> representation.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -344,7 +364,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in expressions.ts:119</li>
+									<li>Defined in expressions.ts:124</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
