--- a/modules/format.html
+++ b/modules/format.html
@@ -161,13 +161,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in format.ts:98</li>
+									<li>Defined in format.ts:100</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Converts the specified date to its string representation using the specified format string and the culture specific format information.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -193,8 +197,6 @@
 								</li>
 								<li>
 									<h5><span class="tsd-flag ts-flagOptional">Optional</span> culture: <a href="../interfaces/environment.cultureinfodescription.html" class="tsd-signature-type">CultureInfoDescription</a></h5>
-									<div class="tsd-comment tsd-typography">
-									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -284,13 +286,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in format.ts:112</li>
+									<li>Defined in format.ts:115</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Converts the specified string to its <code>Date</code> equivalent by using culture specific format information and formatting style.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -327,13 +333,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in format.ts:127</li>
+									<li>Defined in format.ts:131</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Converts the specified string to its <code>Date</code> equivalent by using culture specific format information and formatting style.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -378,7 +388,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in format.ts:84</li>
+									<li>Defined in format.ts:85</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -386,6 +396,10 @@
 									<p>Converts the specified string representation of a number in a specified culture specific format to its <code>number</code> equivalent. The function will
 									return NaN in case parsing wasn&#39;t possible.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
