--- a/classes/drawing.geometry.html
+++ b/classes/drawing.geometry.html
@@ -221,13 +221,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:348</li>
+									<li>Defined in drawing/geometry/geometries.ts:349</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../interfaces/drawing.geometrymeasurements.html" class="tsd-signature-type">GeometryMeasurements</a></h4>
 						</li>
@@ -243,7 +247,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:379</li>
+									<li>Defined in drawing/geometry/geometries.ts:381</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -299,13 +303,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:367</li>
+									<li>Defined in drawing/geometry/geometries.ts:369</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the specified geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
