--- a/classes/drawing.linegeometry.html
+++ b/classes/drawing.linegeometry.html
@@ -144,7 +144,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:400</li>
+									<li>Defined in drawing/geometry/geometries.ts:402</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -193,7 +193,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.linegeometrydescription.html">LineGeometryDescription</a>.<a href="../interfaces/drawing.linegeometrydescription.html#end">end</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:395</li>
+							<li>Defined in drawing/geometry/geometries.ts:397</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -209,7 +209,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.linegeometrydescription.html">LineGeometryDescription</a>.<a href="../interfaces/drawing.linegeometrydescription.html#start">start</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:390</li>
+							<li>Defined in drawing/geometry/geometries.ts:392</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -249,7 +249,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#type">type</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:400</li>
+									<li>Defined in drawing/geometry/geometries.ts:402</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -272,13 +272,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:348</li>
+									<li>Defined in drawing/geometry/geometries.ts:349</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../interfaces/drawing.geometrymeasurements.html" class="tsd-signature-type">GeometryMeasurements</a></h4>
 						</li>
@@ -295,7 +299,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#serialize">serialize</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:433</li>
+									<li>Defined in drawing/geometry/geometries.ts:435</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -352,7 +356,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:419</li>
+									<li>Defined in drawing/geometry/geometries.ts:421</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -384,13 +388,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure-1">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:367</li>
+									<li>Defined in drawing/geometry/geometries.ts:369</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the specified geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
