--- a/classes/drawing.pathgeometry.html
+++ b/classes/drawing.pathgeometry.html
@@ -149,7 +149,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:612</li>
+									<li>Defined in drawing/geometry/geometries.ts:614</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -198,7 +198,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.pathgeometrydescription.html">PathGeometryDescription</a>.<a href="../interfaces/drawing.pathgeometrydescription.html#figures">figures</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:607</li>
+							<li>Defined in drawing/geometry/geometries.ts:609</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -214,7 +214,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.pathgeometrydescription.html">PathGeometryDescription</a>.<a href="../interfaces/drawing.pathgeometrydescription.html#fillrule">fillRule</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:602</li>
+							<li>Defined in drawing/geometry/geometries.ts:604</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -254,7 +254,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#type">type</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:612</li>
+									<li>Defined in drawing/geometry/geometries.ts:614</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -277,13 +277,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:348</li>
+									<li>Defined in drawing/geometry/geometries.ts:349</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../interfaces/drawing.geometrymeasurements.html" class="tsd-signature-type">GeometryMeasurements</a></h4>
 						</li>
@@ -300,7 +304,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#serialize">serialize</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:657</li>
+									<li>Defined in drawing/geometry/geometries.ts:659</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -357,7 +361,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:636</li>
+									<li>Defined in drawing/geometry/geometries.ts:638</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -389,13 +393,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure-1">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:367</li>
+									<li>Defined in drawing/geometry/geometries.ts:369</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the specified geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
