--- a/classes/drawing.rectanglegeometry.html
+++ b/classes/drawing.rectanglegeometry.html
@@ -145,7 +145,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:465</li>
+									<li>Defined in drawing/geometry/geometries.ts:467</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -202,7 +202,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.rectanglegeometrydescription.html">RectangleGeometryDescription</a>.<a href="../interfaces/drawing.rectanglegeometrydescription.html#height">height</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:460</li>
+							<li>Defined in drawing/geometry/geometries.ts:462</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -218,7 +218,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.rectanglegeometrydescription.html">RectangleGeometryDescription</a>.<a href="../interfaces/drawing.rectanglegeometrydescription.html#position">position</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:450</li>
+							<li>Defined in drawing/geometry/geometries.ts:452</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -251,7 +251,7 @@
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.rectanglegeometrydescription.html">RectangleGeometryDescription</a>.<a href="../interfaces/drawing.rectanglegeometrydescription.html#width">width</a></p>
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:455</li>
+							<li>Defined in drawing/geometry/geometries.ts:457</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -274,7 +274,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#type">type</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:465</li>
+									<li>Defined in drawing/geometry/geometries.ts:467</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -297,13 +297,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:348</li>
+									<li>Defined in drawing/geometry/geometries.ts:349</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="../interfaces/drawing.geometrymeasurements.html" class="tsd-signature-type">GeometryMeasurements</a></h4>
 						</li>
@@ -320,7 +324,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#serialize">serialize</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:508</li>
+									<li>Defined in drawing/geometry/geometries.ts:510</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -377,7 +381,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:486</li>
+									<li>Defined in drawing/geometry/geometries.ts:488</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -409,13 +413,17 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="drawing.geometry.html">Geometry</a>.<a href="drawing.geometry.html#measure-1">measure</a></p>
 								<ul>
-									<li>Defined in drawing/geometry/geometries.ts:367</li>
+									<li>Defined in drawing/geometry/geometries.ts:369</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Returns the bounding box of the specified geometry.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>host</dt>
+									<dd></dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
