--- a/enums/drawing.buffertype.html
+++ b/enums/drawing.buffertype.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>LimitTypeId | PiWeb Plot Extension API Reference</title>
+	<title>BufferType | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/environment.html">environment</a>
+					<a href="../modules/drawing.html">drawing</a>
 				</li>
 				<li>
-					<a href="environment.limittypeid.html">LimitTypeId</a>
+					<a href="drawing.buffertype.html">BufferType</a>
 				</li>
 			</ul>
-			<h1>Enumeration LimitTypeId</h1>
+			<h1>Enumeration BufferType</h1>
 		</div>
 	</div>
 </header>
@@ -78,10 +78,8 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="environment.limittypeid.html#control" class="tsd-kind-icon">Control</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="environment.limittypeid.html#scrap" class="tsd-kind-icon">Scrap</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="environment.limittypeid.html#tolerance" class="tsd-kind-icon">Tolerance</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="environment.limittypeid.html#warning" class="tsd-kind-icon">Warning</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="drawing.buffertype.html#hostbuffer" class="tsd-kind-icon">Host<wbr>Buffer</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="drawing.buffertype.html#runtimebuffer" class="tsd-kind-icon">Runtime<wbr>Buffer</a></li>
 							</ul>
 						</section>
 					</div>
@@ -90,42 +88,22 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Enumeration members</h2>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="control" class="tsd-anchor"></a>
-					<h3>Control</h3>
-					<div class="tsd-signature tsd-kind-icon">Control<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+					<a name="hostbuffer" class="tsd-anchor"></a>
+					<h3>Host<wbr>Buffer</h3>
+					<div class="tsd-signature tsd-kind-icon">Host<wbr>Buffer<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:477</li>
+							<li>Defined in drawing/image/bitmap.ts:19</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="scrap" class="tsd-anchor"></a>
-					<h3>Scrap</h3>
-					<div class="tsd-signature tsd-kind-icon">Scrap<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<a name="runtimebuffer" class="tsd-anchor"></a>
+					<h3>Runtime<wbr>Buffer</h3>
+					<div class="tsd-signature tsd-kind-icon">Runtime<wbr>Buffer<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in environment.ts:478</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="tolerance" class="tsd-anchor"></a>
-					<h3>Tolerance</h3>
-					<div class="tsd-signature tsd-kind-icon">Tolerance<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in environment.ts:475</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="warning" class="tsd-anchor"></a>
-					<h3>Warning</h3>
-					<div class="tsd-signature tsd-kind-icon">Warning<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in environment.ts:476</li>
+							<li>Defined in drawing/image/bitmap.ts:18</li>
 						</ul>
 					</aside>
 				</section>
@@ -143,10 +121,10 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/data.html">data</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/environment.html">environment</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -183,19 +161,13 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="environment.limittypeid.html" class="tsd-kind-icon">Limit<wbr>Type<wbr>Id</a>
+						<a href="drawing.buffertype.html" class="tsd-kind-icon">Buffer<wbr>Type</a>
 						<ul>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="environment.limittypeid.html#control" class="tsd-kind-icon">Control</a>
+								<a href="drawing.buffertype.html#hostbuffer" class="tsd-kind-icon">Host<wbr>Buffer</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="environment.limittypeid.html#scrap" class="tsd-kind-icon">Scrap</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="environment.limittypeid.html#tolerance" class="tsd-kind-icon">Tolerance</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="environment.limittypeid.html#warning" class="tsd-kind-icon">Warning</a>
+								<a href="drawing.buffertype.html#runtimebuffer" class="tsd-kind-icon">Runtime<wbr>Buffer</a>
 							</li>
 						</ul>
 					</li>
