--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     }
 }
 </code></pre>
-				<h3 id="4-create-the-folder-types-and-copy-the-file-piweb-1-0-d-ts-into-it">4. Create the folder <code>@types</code> and copy the file <code>piweb-1-0.d.ts</code> into it</h3>
+				<h3 id="4-create-the-folder-types-and-copy-the-file-piweb-1-x-d-ts-into-it">4. Create the folder <code>@types</code> and copy the file <code>piweb-1-x.d.ts</code> into it</h3>
 				<p>These are the type definitions of the PiWeb plot extension interface. It will enable productivity features like syntax highlighting and auto completion in your IDE. The folder <code>@types</code> was defined as the type root in the <code>tsconfig.json</code> file. You can downlod.</p>
 				<p><strong>Hint:</strong> You can download the result of the quickstart guide here:</p>
 				<table>
@@ -151,6 +151,10 @@
 						<tr>
 							<td>7.4 or later</td>
 							<td><a href="https://github.com/ZEISS-PiWeb/PiWeb-Plot-Extension/raw/master/piweb-1-2.d.ts">Download</a></td>
+						</tr>
+						<tr>
+							<td>7.8 or later</td>
+							<td><a href="https://github.com/ZEISS-PiWeb/PiWeb-Plot-Extension/raw/master/piweb-1-3.d.ts">Download</a></td>
 						</tr>
 					</tbody>
 				</table>
